<resources>
    <string name="app_name" translatable="false">Guerreiro Games</string>
    <string name="get_text_email" translatable="false">E-Mail</string>
    <string name="get_text_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_cadastro">Cadastrar-se</string>
    <string name="data_placeholder">12/08/2000</string>
    <string name="text_telefone" translatable="false">(00) 90000-0000</string>
    <string name="text_telefoneAlt" translatable="false">(00) 0000-0000</string>
    <string name="text_CPF" translatable="false">123.456.789.00</string>
    <string name="text_RG" translatable="false">01.234.567-89</string>
    <string name="text_ruaEndereco">Rua Fernando Ivan, 99</string>
    <string name="text_complemento">casa/ap. 02, box 3</string>
    <string name="text_CEP" translatable="false">00000-000</string>
    <string name="text_municipio" translatable="false">SP-Osasco</string>
    <string name="title_activity_tela_main">Principal</string>
    <string name="title_activity_ar_um">Ar Condicionado</string>
    <string name="fernando" translatable="false">
        <b>FERIAS!</b>\n\n
        Se tu pesquisou isso é porque realmente necessita...\nagora relaxe...\n\n\n\n

        RECEITA DE BOLO SIMPLES\n
        2 Xícaras de açúcar\n
        3 Xícaras de farinha de trigo\n
        4 Colheres (sopa) de margarina\n
        3 Ovos\n
        1 e 1/2 Xícara de leite\n
        1 Colher (sopa) bem cheia de fermento em pó\n\n\n

        Bata as claras em neve e reserve.\n\n

    Misture as gemas, a margarina e o açúcar até obter uma massa homogênea.\n\n

    Acrescente o leite e a farinha de trigo aos poucos, sem parar de bater.\n\n

    Por último, adicione as claras em neve e o fermento.\n\n

    Despeje a massa em uma forma grande de furo central untada e enfarinhada.\n\n

    Asse em forno médio 180 °C, preaquecido, por aproximadamente 40 minutos ou ao furar o bolo com um garfo, este saia limpo.\n\n\n\n
    </string>
    <string name="pagRB_debito">Selecionado o <b>Débito</b></string>
    <string name="pagRB_credito">Selecionado o <b>Crédito</b></string>
    <string name="or_amento">Orçamento</string>
    <string name="video_games" translatable="false">Video-games</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="de_qual_marcar">De qual marcar?</string>
    <string name="nintendo" translatable="false">Nintendo</string>
    <string name="sony" translatable="false">Sony</string>
    <string name="microsoft" translatable="false">Microsoft</string>
    <string name="outros">Outros:</string>
    <string name="voltar">Voltar</string>
    <string name="nos_conte_mais">Nos conte mais...</string>
    <string name="modelo">Modelo:</string>
    <string name="defeitos_comuns">defeitos comuns:</string>
    <string name="n_o_liga">Não liga.</string>
    <string name="liga_porem_n_o_da_tela">Liga, porem não da tela.</string>
    <string name="outrosOp">Outros</string>
    <string name="adicional">Adicional:</string>
    <string name="proximo">Proximo</string>
    <string name="nome">*Nome:</string>
    <string name="hint_nome_completo">Nome completo</string>
    <string name="cpf_cnpj">*CPF/CNPJ:</string>
    <string name="btnT_fisica">Fisica</string>
    <string name="btnT_juridica">Juridica</string>
    <string name="marca">Marca:</string>
    <string name="adicional_orcamento">Adicional:\n%s</string>
    <string name="modelo_orcamento">Modelo:\t%s</string>
    <string name="marca_orcamento">Marca:\t%s</string>
    <string name="entrar_login">Entrar</string>
    <string name="esqueci_a_senha_login">Esqueci a senha.</string>
    <string name="cadastre_se_login">Cadastre-se</string>
    <string name="debug">Debug</string>
    <string name="do_que_voce_precisa_servicos">Do que você precisa?</string>
    <string name="confirmar_btn_servicos">Confirmar</string>
    <string name="suporte_btn_servicos">Suporte</string>
    <string name="hint_pesquisar_servicos">Pesquisar...</string>
    <string name="text_forget_password">Coloque o seu E-Mail para recuperar a senha.</string>
    <string name="hint_exemplo_email">seu_email@email.com</string>
    <string name="esqueci_a_senha_btn_esqueci">Esqueci a senha</string>
    <string name="do_que_voce_precisa_ar_um">Do que você precisa?</string>
    <string name="ar_condicionado_ar_um">Ar-condicionado</string>
    <string name="higienizacao_ar_um">Higienização</string>
    <string name="manutencao_ar_um">Manutenção</string>
    <string name="instalacao_ar_um">Instalação</string>
    <string name="hint_outros_ar_um">Mudar o cómodo</string>
    <string name="frio_e_quente">Frio e quente?</string>
    <string name="btus">BTUs:</string>
    <string name="calcular_btu">Calcular BTU</string>
    <string name="quando_precisa">Quando precisa?</string>
    <string name="agendar_dia">Agendar dia:</string>
    <string name="calendario">Calendario</string>
    <string name="horario">Horario</string>
    <string name="agendar">Agendar</string>
    <string name="rg">*RG:</string>
    <string name="hint_rg" translatable="false">12.345.678-9</string>
    <string name="data_de_nascimento">*Data de nascimento:</string>
    <string name="hint_data_de_nascimento">20/06/2005</string>
    <string name="cep">*CEP:</string>
    <string name="hint_cep" translatable="false">00000-000</string>
    <string name="endereco">*Endereço com número:</string>
    <string name="hint_endereco">Rua Fernando Ivan, 99</string>
    <string name="bairro">*Bairro:</string>
    <string name="hint_bairro" translatable="false">Jd. Dolores</string>
    <string name="municipio">*Município:</string>
    <string name="hint_municipio" translatable="false">Osasco</string>
    <string name="estado">*Estado:</string>
    <string name="hint_estado" translatable="false">SP</string>
    <string name="complemento">Complemento:</string>
    <string name="hint_complemento">Casa/Ap. 02; 11º andar</string>
    <string name="telefone_residencial">Telefone Residencial:</string>
    <string name="hint_telefone_residencial" translatable="false">(00) 1234-5678</string>
    <string name="telefone_celular">*Telefone Celular:</string>
    <string name="hint_telefone_celular" translatable="false">(00) 91234-5678</string>
    <string name="email" translatable="false">*Email:</string>
    <string name="confirmar_email">*Confirmar email:</string>
    <string name="senha">*Senha:</string>
    <string name="hint_senha">Senha</string>
    <string name="confirmar_senha">*Confirmar senha:</string>
    <string name="btus_orcamento">BTUs:\t%s</string>
    <string name="cartao">Cartão</string>
    <string name="total_pagamento" translatable="false">Total:t\\tR$ %f</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="troco">Troco?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="dinheiro_cartao_pagamento_text">Vai de dinheiro\nou no cartão?</string>
    <string name="nota_prestador_final_os" translatable="false">%f</string>
    <string name="nome_prestador_final_os" translatable="false">%s, %d\n%s</string>
    <string name="concluido_final_os">Concluído</string>
    <string name="data_agendada_final_os">Data agendada:%s</string>
    <string name="hora_agendada_final_os">Hora agendada:%s</string>
    <string name="pagamento_agendado_final_os">Pagar com:</string>
    <string name="text_nome">Nome completo</string>
    <string name="servico_agendado">Serviço agendado!</string>
    <string name="menu_servicos_op1_minha_conta">Minha conta</string>
    <string name="menu_servicos_op2_minhas_os">Minhas O.S.</string>
    <string name="menu_servicos_op_settings">Configurações</string>
    <string name="menu_menu_nova_os">Nova O.S.</string>
    <string name="menu_menu_op1_casa">Para minha casa</string>
    <string name="menu_menu_op2_empresa">Para minha empresa</string>
    <string name="celular_manifest">Celular</string>
    <string name="computador_manifest">Computador</string>
    <string name="montar_computador_manifest">Monte seu PC</string>
    <string name="telefone_celular_text">Telefone Celular</string>
    <string name="help_desk">Help desk\n</string>
    <string name="tablete" translatable="false">Tablet</string>
    <string name="monitoramento">Segurança e monitoramento</string>
    <string name="tela_display">Tela display</string>
    <string name="tela_touch">Tela Touch</string>
    <string name="sensor_de_proximidade">Sensor de ligação</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="wi_fi" translatable="false">Wi-Fi</string>
    <string name="bot_es_volume_power">Botões Volume/Power</string>
    <string name="carca_a">Carcaça</string>
    <string name="auto_falante">Alto-falante</string>
    <string name="auto_falante_auricular">Falante auricular</string>
    <string name="microfone">Microfone</string>
    <string name="c_mera_frontal">Câmera frontal</string>
    <string name="c_mera_traseira">Câmera traseira</string>
    <string name="bateria">Bateria</string>
    <string name="conector_de_carga">Conector de carga</string>
    <string name="tampa_traseira">Tampa traseira</string>
    <string name="digital">Digital</string>
    <string name="botoes_volume">Botões Volume -/+</string>
    <string name="botao_power">Botão Power</string>
    <string name="colocar_peças_defeituosas">Por favor selecione o que está com defeito em seu aparelho.</string>
    <string name="couting" translatable="false">%d:%d</string>
    <string name="show_info">%s\n\n%s\n\n%s</string>
    <string name="defeitos_orcamento">Defeitos:\t%s</string>
    <string name="celDois_hint_adicional_EditText">Descreva brevemente os problemas em seu aparelho</string>
    <string name="contador" translatable="false">%d</string>
    <string name="para_empresa">EMPRESA</string>
    <string name="para_casa">Atendimento em casa</string>
    <string name="moden_config">Configuração de modem</string>
    <string name="roteador_config">Configuração de roteador</string>
    <string name="repetidor_config">Configuração de repetidor</string>
    <string name="analise_repo">Análise e reposicionamento</string>
    <string name="caveamento">Cabeamento</string>
    <string name="interface_config">Configuração interface smart home</string>
    <string name="formatacao">Formatação</string>
    <string name="instalacao_soft">Instalação de software</string>
    <string name="dfh_n1">Diagnostico de funcionamento de hardware. Nivel 1</string>
    <string name="acessorio_config">Configuração de acessório</string>
    <string name="tvbox_update">Atualização de TVbox</string>
    <string name="tvbox_config">Configuração de TVbox</string>
    <string name="smart_config">Configuração smartTV</string>
    <string name="cftv_instalacao_kit">Instalação de kit CFTV</string>
    <string name="acessoRemoto_cftv">Configuração de acesso remoto</string>
    <string name="cam_install">Instalação de câmeras</string>
    <string name="central_install">Instalação central de alarme</string>
    <string name="sensor_install">Instalação de sensores</string>
    <string name="cerca_install">Instalação de cerca eletrica</string>

</resources>