<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_fernando"
    tools:context=".servicos.celular.CelUm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/modelo_tela_principal"
        android:backgroundTint="#66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/celUm_Marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/de_qual_marcar"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/background_shadow" />

            <AutoCompleteTextView
                android:id="@+id/celUm_Modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/background_shadow" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/celUm_TelaDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/tela_display"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_TelaTouch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/tela_touch"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_SensorProx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/sensor_de_proximidade"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_Bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/bluetooth"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_WiFi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/wi_fi"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_Botoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/bot_es_volume_power"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_Carcaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/carca_a"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_AutoFalante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/auto_falante"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_AutoFalanteAuricular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/auto_falante_auricular"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_Microfone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/microfone"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_CameraFrontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/c_mera_frontal"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_CameraTraseira"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/c_mera_traseira"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_ConectorCarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/conector_de_carga"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/celUm_Bateria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:onClick="onCheckboxCliked"
                    android:text="@string/bateria"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>