<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".servicos.arcondicionado.ArUm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/do_que_voce_precisa_ar_um"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/ar_condicionado_ar_um"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/arCB_um"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/higienizacao_ar_um"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/arCB_dois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/manutencao_ar_um"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <CheckBox
                android:id="@+id/arCB_tres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="@string/instalacao_ar_um"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/arCB_outros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginLeft="32dp"
                    android:text="@string/outros"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/background_shadow"
                    android:hint="@string/hint_outros_ar_um"
                    android:lines="1"
                    android:maxLines="1"
                    android:outlineAmbientShadowColor="@color/black"
                    android:textSize="20dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="32dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="16dp"
                    android:onClick="arUm_btnVoltar"
                    android:text="@string/voltar" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginHorizontal="16dp"
                    android:onClick="arUm_btnProximo"
                    android:text="@string/confirmar" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>