<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_fernando"
    tools:context=".servicos.videogames.VideoDois">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/modelo_tela_principal"
        android:backgroundTint="#66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nos_conte_mais"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/video_games"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/videoDois_tvMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="#### ####"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modelo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/videoDois_actvModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:background="@drawable/background_shadow"
                    android:lines="1"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/defeitos_comuns"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/videoDois_checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:buttonTint="@color/checkbox_color_tint"
                android:text="@string/n_o_liga"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/videoDois_checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:buttonTint="@color/checkbox_color_tint"
                android:text="@string/liga_porem_n_o_da_tela"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/videoDois_checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:buttonTint="@color/checkbox_color_tint"
                android:text="@string/outrosOp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/adicional"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/videoDois_etAdicional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_shadow"
                android:lines="4"
                android:maxLength="300"
                android:maxLines="4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/borda_redonda"
                    android:onClick="videoDois_btnProximo"
                    android:text="@string/confirmar"
                    android:textSize="18sp"
                    android:theme="@style/corVerde" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/borda_redonda"
                    android:onClick="videoDois_btnVolta"
                    android:text="@string/voltar"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>